tests/passing/block_yield_binding.tails
func tests() -> unit:
  let a: int = 123
