tests/failing/generics_type_def_recursive.tails
type A<T> = A

func tests() -> unit:
  let a: A<int> = 1
